Deployement/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employee-backend
  template:
    metadata:
      labels:
        app: employee-backend
    spec:
      containers:
        - name: employee-backend
          image: IMAGE_PLACEHOLDER
          ports:
            - containerPort: 8080
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kv-secrets"
