Deployement/service.yml
apiVersion: v1
kind: Service
metadata:
  name: employee-backend-service
spec:
  selector:
    app: employee-backend
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
